--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>de.hsbo.fbg.hlnug</groupId>
     <artifactId>HLNUG-GeoTools</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <name>HLNUG-GeoTools</name>
 
     <properties>
@@ -28,5 +29,29 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
+    
+    <build>
+        <plugins>   
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>3.2.2</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <transformers>
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>de.hsbo.fbg.hlnug.Main</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>    
 </project>
